[gd_scene load_steps=7 format=3 uid="uid://cps7kw32x0uom"]

[ext_resource type="Script" uid="uid://dvg04d0ib3ydm" path="res://Player/player.gd" id="1_4ntmi"]
[ext_resource type="Texture2D" uid="uid://cg5ymequqfcsh" path="res://assets/dovakinbase-removebg-preview.png" id="2_4ntmi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_00tjw"]
size = Vector2(8, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ntmi"]
size = Vector2(8, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gwnis"]
size = Vector2(8, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_btcbx"]
size = Vector2(8, 22)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
position = Vector2(0, -2)
collision_layer = 2
collision_mask = 125
script = ExtResource("1_4ntmi")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -10.5)
scale = Vector2(0.05, 0.056)
texture = ExtResource("2_4ntmi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -10.5)
shape = SubResource("RectangleShape2D_00tjw")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -15)
zoom = Vector2(3, 3)
process_callback = 0
limit_smoothed = true
position_smoothing_enabled = true

[node name="BlockCollision" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 40

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlockCollision"]
position = Vector2(0, -22.5)
shape = SubResource("RectangleShape2D_4ntmi")
debug_color = Color(0.7730817, 0.28755343, 0.84058005, 0.41960785)

[node name="EnemyCollision" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyCollision"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_gwnis")
debug_color = Color(0.7876358, 0, 0.005261365, 0.4745098)

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_btcbx")
debug_color = Color(0.4099599, 0.60684836, 0, 0.41960785)

[node name="FireTimer" type="Timer" parent="."]

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
